--- a/views/index.ejs
+++ b/views/index.ejs
@@ -502,6 +502,7 @@
                     <h3 class="text-white mb-4">Suivez-Nous</h3>
                     <div class="d-flex">
                         <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="https://www.instagram.com/data_security_maroc/"><i class="fab fa-instagram fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="https://www.linkedin.com/company/data-security-maroc/mycompany/"><i class="fab fa-linkedin fw-normal"></i></a>
                         <!-- Ajoutez d'autres icônes de réseaux sociaux si nécessaire -->
                     </div>
                 </div>
