--- a/views/products-by-service.ejs
+++ b/views/products-by-service.ejs
@@ -168,48 +168,50 @@
     
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light mt-5 py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container pt-5">
-            <div class="row g-5">
-                <div class="col-lg-4 col-md-6">
-                    <h3 class="text-white mb-4">Quick Links</h3>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href=".navbar"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                        <a class="text-light mb-2" href="#apropos"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                        <a class="text-light mb-2" href="#services"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                        
-                        
-                    </div>
-                </div>
-                
-                <div class="col-lg-5 col-md-6">
-                    <h3 class="text-white mb-4">Get In Touch</h3>
-                    <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>DATA SECURITY, Casablanca 20290</p>
-                    <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>datasecurity@datasecurity.ma</p>
-                    <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i> 06 61 09 29 28</p>
-                    <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i> 05 22 40 99 05</p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h3 class="text-white mb-4">Follow Us</h3>
-                    <div class="d-flex">
-                        
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.instagram.com/data_security_maroc/"><i class="fab fa-instagram fw-normal"></i></a>
-                    </div>
-                </div>
-                
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid bg-primary text-light py-4">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="https://www.instagram.com/ignite_dev24/">Ignite</a>. All Rights Reserved.</p>
-                </div>
-                
-            </div>
-        </div>
-    </div>
+    <div class="container-fluid bg-dark text-light mt-5 py-5">
+      <div class="container pt-5">
+          <div class="row g-5">
+              <!-- Colonne 1 : Liens Rapides -->
+              <div class="col-lg-3 col-md-6">
+                  <h3 class="text-white mb-4">Liens Rapides</h3>
+                  <div class="d-flex flex-column justify-content-start">
+                      <a class="text-light mb-2" href=".navbar"><i class="bi bi-arrow-right text-primary me-2"></i>Accueil</a>
+                      <a class="text-light mb-2" href="#apropos"><i class="bi bi-arrow-right text-primary me-2"></i>À Propos</a>
+                      <a class="text-light mb-2" href="#services"><i class="bi bi-arrow-right text-primary me-2"></i>Nos Services</a>
+                      <a class="text-light mb-2" href="#projets"><i class="bi bi-arrow-right text-primary me-2"></i>Nos Projets</a>
+                  </div>
+              </div>
+              <!-- Colonne 2 : Contactez-Nous -->
+              <div class="col-lg-3 col-md-6">
+                  <h3 class="text-white mb-4">Contactez-Nous</h3>
+                  <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>DATA SECURITY, Casablanca 20290</p>
+                  <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>datasecurity@datasecurity.ma</p>
+                  <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>06 61 09 29 28</p>
+                  <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>05 22 40 99 05</p>
+              </div>
+              <!-- Colonne 3 : Horaires -->
+              <div class="col-lg-3 col-md-6">
+                  <h3 class="text-white mb-4">Horaires</h3>
+                  <div>
+                      <p class="mb-2">Lundi - Vendredi :</p>
+                      <p class="mb-2">09:00 - 12:30</p>
+                      <p class="mb-2 border-bottom border-secondary pt-2">14:00 - 18:00</p>
+                      <p class="mb-2">Samedi :</p>
+                      <p class="mb-0">09:00 - 13:00</p>
+                  </div>
+              </div>
+              <!-- Colonne 4 : Suivez-Nous -->
+              <div class="col-lg-3 col-md-6">
+                  <h3 class="text-white mb-4">Suivez-Nous</h3>
+                  <div class="d-flex">
+                      <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="https://www.instagram.com/data_security_maroc/"><i class="fab fa-instagram fw-normal"></i></a>
+                      <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="https://www.linkedin.com/company/data-security-maroc/mycompany/"><i class="fab fa-linkedin fw-normal"></i></a>
+                      <!-- Ajoutez d'autres icônes de réseaux sociaux si nécessaire -->
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
     <!-- Footer End -->
 
 
