--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,6 +25,9 @@
     <a href="https://www.instagram.com/data_security_maroc/" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" width="40" height="40">
     </a>
+    <a href="https://www.linkedin.com/company/data-security-maroc/mycompany/" target="_blank">
+      <img src="http://www.freepnglogos.com/uploads/official-linkedin-logo----17.png" alt="Linkedin" width="40" height="40">
+    </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-0">
             <a href="#caroussel-start" class="nav-item nav-link active">ACCUEIL</a>
