--- a/views/index.ejs
+++ b/views/index.ejs
@@ -481,7 +481,7 @@
                 <!-- Colonne 2 : Contactez-Nous -->
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-white mb-4">Contactez-Nous</h3>
-                    <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>DATA SECURITY, Casablanca 20290</p>
+                    <a href="https://maps.app.goo.gl/11r9pe8mZ8Jg4eWB6"><p class="mb-2"><i class="bi bi-geo-alt text-primary me-2" ></i>DATA SECURITY, Casablanca 20290</p></a>
                     <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>datasecurity@datasecurity.ma</p>
                     <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>06 61 09 29 28</p>
                     <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>05 22 40 99 05</p>
@@ -491,7 +491,7 @@
                     <h3 class="text-white mb-4">Horaires</h3>
                     <div>
                         <p class="mb-2">Lundi - Vendredi :</p>
-                        <p class="mb-2">09:00 - 12:30</p>
+                        <p class="mb-2">08:30 - 12:30</p>
                         <p class="mb-2 border-bottom border-secondary pt-2">14:00 - 18:00</p>
                         <p class="mb-2">Samedi :</p>
                         <p class="mb-0">09:00 - 13:00</p>
