--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,15 +19,9 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     
-    <a href="https://wa.me/212661092928" target="_blank">
-      <img src="https://www.logolynx.com/images/logolynx/45/4583214ebb6a6a9d0ef79f4347c3baa6.jpeg" style="margin-right: 5px;" alt="WhatsApp" width="45" height="45">
-    </a>
-    <a href="https://www.instagram.com/data_security_maroc/" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" style="margin-right: 5px;" alt="Instagram" width="40" height="40">
-    </a>
-    <a href="https://www.linkedin.com/company/data-security-maroc/mycompany/" target="_blank">
-      <img src="http://www.freepnglogos.com/uploads/official-linkedin-logo----17.png" alt="Linkedin" width="40" height="40">
-    </a>
+    
+    
+    
     
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-0">
@@ -47,5 +41,9 @@
             </div> -->
             <a href="mailto:datasecurity@datasecurity.ma" class="nav-item nav-link">CONTACT</a>
         </div>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="https://www.instagram.com/data_security_maroc/"><i class="fab fa-instagram fw-normal instagram-logo"></i></a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="https://wa.me/212661092928"><i class="fab fa-whatsapp fw-normal instagram-logo"></i></a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="https://www.linkedin.com/company/data-security-maroc/mycompany/"><i class="fab fa-linkedin fw-normal instagram-logo"></i></a>
+        
     </div>
 </nav>
