--- a/views/index.ejs
+++ b/views/index.ejs
@@ -421,8 +421,9 @@
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-white mb-4">Suivez-Nous</h3>
                     <div class="d-flex">
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded me-2 btn-footer" href="https://www.instagram.com/data_security_maroc/" "><i class="fab fa-instagram fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded me-2 btn-footer" href="https://www.instagram.com/data_security_maroc/" ><i class="fab fa-instagram fw-normal"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square rounded me-2 btn-footer" href="https://www.linkedin.com/company/data-security-maroc/mycompany/"><i class="fab fa-linkedin fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded me-2 btn-footer" href="https://wa.me/212661092928"><i class="fab fa-whatsapp fw-normal "></i></a>
                         <!-- Ajoutez d'autres icônes de réseaux sociaux si nécessaire -->
                     </div>
                 </div>
