--- a/views/product-details.ejs
+++ b/views/product-details.ejs
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SafeCam - CCTV Website Template</title>
+    <title>Data Security Maroc prestataire au service de sécurité</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
-    <link rel="icon" type="image/x-icon" href="/img/LOGO DATA 0.PNG">
+    <meta content="Data Security" name="keywords">
+    <meta content="DATA SECURITY, expert en sécurité électronique avec plus de 16 ans d'expérience, intervient partout au Maroc pour offrir à ses clients des prestations de sécurité fiables et de qualité. Faites confiance à un partenaire dédié à votre protection." name="description">
+    <link rel="icon" type="image/x-icon" href="img/LOGO DATA 0.PNG">
 
     <!-- Favicon -->
     <link href="/img/LOGO DATA 0.png" rel="icon">
